<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">TheWeatherApp</string>
    <string name="temperature" translatable="false">+17°C</string>
    <string name="spb">Saint-Petersburg</string>
    <string name="moscow">Moscow</string>
    <string name="paris">Paris</string>
    <string name="berlin">Berlin</string>
    <string name="london">London</string>
    <string name="wing_speed_title">Wind speed</string>
    <string name="pressure_title">Pressure</string>
    <string name="wind_speed">6 mps</string>
    <string name="pressure" translatable="false">755 mm</string>
    <string name="city_placeholder">City...</string>
    <string name="display_settings">Display settings</string>
    <string name="application_settings">Application settings</string>
    <string name="theme_setting_title">Theme:</string>
    <string name="light_theme_title">Light</string>
    <string name="dark_theme_title">Dark</string>
    <string name="units_settings_title">Units:</string>
    <string name="metric_units_title">Metric(°C)</string>
    <string name="imperial_units_title">Imperial(°F)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="about_city">ABOUT CITY</string>
    <string name="wiki_search_url" translatable="false">https://en.wikipedia.org/wiki/Special:Search?search=</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="_10" translatable="false">-10</string>
    <string name="show_weather">Show weather</string>
    <string name="city_name">City Name</string>
    <string name="go">GO</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="feedback_form">Send feedback</string>
    <string name="share">Share</string>
    <string name="my_favourite_user" translatable="false">My favourite User</string>
    <string name="user_myweather_com" translatable="false">user@myweather.com</string>
    <string name="select_city">Select city</string>
    <string name="communication">Communication</string>
    <string name="clear">Clear</string>
    <string name="sort_asc">Sort ↑</string>
    <string name="temp_format" translatable="false">+#;-#</string>
    <string name="sort_desc">Sort ↓</string>
    <string name="msg_token_fmt" ></string>
</resources>
