<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_cities"
            android:icon="@drawable/ic_action_city_select"
            android:title="@string/select_city" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_action_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_action_send"
            android:title="@string/feedback_form" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_info"
            android:title="@string/about" />
    </group>
</menu>